Major User visible changes in Buildbot.             -*- outline -*-
   see the git log for a detailed list of changes:
   http://github.com/buildbot/buildbot/commits/master


* Next Version


* Buildbot 0.8.3 (December 19, 2010)

** SQLAlchemy & SQLAlchemy-Migrate

Buildbot now uses SQLAlchemy as a database abstraction layer.  This will give
us greater inter-database compatibility and a more stable and reliable basis
for this core component of the framework.  SQLAlchemy-Migrate is used to manage
changes to the database schema from version to version.

** Deprecations and Removals

*** Change sources can no longer call change-related methods on self.parent.
Instead, use self.master methods, e.g., self.master.addChange.

* Next Release

** PBChangeSource now supports authentication

PBChangeSource now supports the `user` and `passwd` arguments.  Users with a
publicly exposed PB port should use these parameters to limit sendchange
access.

Previous versions of Buildbot should never be configured with a PBChangeSource
and a publicly accessible slave port, as that arrangement  allows anyone to
connect and inject a change into the Buildmaster without any authentication at
all, aside from the hard-coded 'change'/'changepw' credentials.  In many cases,
this can lead to arbitrary code injection on slaves.

** Experiemental Gerrit and Repo support

A new ChangeSource (GerritChangeSource), status listener (GerritStatusPush),
and source step (Repo) are available in this version.  These are not fully
documented and still have a number of known bugs outstanding (see
http://buildbot.net/trac/wiki/RepoProject), and as such are considered
experimental in this release.

** WithProperties now supports lambda substitutions

WithProperties now has the option to pass callable functions as keyword
arguments to substitute in the results of more complex Python code at
evaluation-time.

** New 'SetPropertiesFromEnv' step

This step uses the slave environment to set build properties.
