@@ -5,6 +5,14 @@ Major User visible changes in Buildbot.             -*- outline -*-
 
 * Next Version
 
+** Less garish color scheme
+
+The default color scheme for Buildbot has been modified to make it slightly
+less, well, neon. Note: This will not affect already-created masters, as
+their default.css file has already been created. If you currently use the
+default and want to get the new version, just overwrite public_html/default.css
+with the copy in this version.
+
 
 * Buildbot 0.8.3 (December 19, 2010)
 
